--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -1,28 +1,36 @@
-beautifulsoup4==4.9.3
-brotlipy==0.7.0
-certifi==2020.11.8
-cffi==1.14.4
-chardet==3.0.4
-courlan==0.2.3
-cryptography==3.2.1
-cssselect==1.1.0
-filelock==3.0.12
-htmldate==0.7.2
-idna==2.10
-jusText==2.2.0
-lxml==4.6.2
-pip==20.3
-pycparser==2.20
-pyOpenSSL==20.0.0
-PySocks==1.7.1
-python-dateutil==2.8.1
-readability-lxml==0.8.1
-requests==2.25.0
-requests-file==1.5.1
-setuptools==50.3.2
-six==1.15.0
-soupsieve==2.0.1
-tldextract==3.1.0
-trafilatura==0.6.1
-urllib3==1.26.2
-wheel==0.36.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+beautifulsoup4=4.9.3=pyha847dfd_0
+brotlipy=0.7.0=py39h27cfd23_1003
+ca-certificates=2021.1.19=h06a4308_0
+certifi=2020.12.5=py39h06a4308_0
+cffi=1.14.4=py39h261ae71_0
+chardet=4.0.0=py39h06a4308_1003
+cryptography=3.3.1=py39h3c74f83_0
+idna=2.10=pyhd3eb1b0_0
+ld_impl_linux-64=2.33.1=h53a641e_7
+libedit=3.1.20191231=h14c3975_1
+libffi=3.3=he6710b0_2
+libgcc-ng=9.1.0=hdf63c60_0
+libstdcxx-ng=9.1.0=hdf63c60_0
+ncurses=6.2=he6710b0_1
+openssl=1.1.1i=h27cfd23_0
+pip=20.3.3=py39h06a4308_0
+pycparser=2.20=py_2
+pyopenssl=20.0.1=pyhd3eb1b0_1
+pysocks=1.7.1=py39h06a4308_0
+python=3.9.1=hdb3f193_2
+readline=8.0=h7b6447c_0
+requests=2.25.1=pyhd3eb1b0_0
+setuptools=51.3.3=py39h06a4308_4
+six=1.15.0=py39h06a4308_0
+soupsieve=2.1=pyhd3eb1b0_0
+sqlite=3.33.0=h62c20be_0
+tk=8.6.10=hbc83047_0
+tzdata=2020f=h52ac0ba_0
+urllib3=1.26.2=pyhd3eb1b0_0
+wheel=0.36.2=pyhd3eb1b0_0
+xz=5.2.5=h7b6447c_0
+zlib=1.2.11=h7b6447c_3
