--- a/query_processor/package.json
+++ b/query_processor/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
-    "build": "babel src/server -d dist/index.js",
-    "start": "npm run build && node dist/index.js",
-    "restart": "rimraf dist && npm run start",
-    "dev": "nodemon --exec npm run restart"
+    "express-start": "npm run express-build && node dist/index.js",
+    "express-build": "rimraf dist && babel src/server -d dist/index.js",
+    "express-nodemon": "nodemon --watch src/server --exec npm run express-start",
+    "dev": "concurrently npm:react-start npm:express-nodemon",
+    "build": "npm run react-build && npm run express-build",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,10 +32,12 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "heap": "^0.2.6",
     "react": "^17.0.1",
