Document & Query Preprocessing (#14)
* Added preprocessing to crawler and query processor

* Removed preprocessing function from indexer

Co-authored-by: dinos <papakosk@csd.auth.gr>

--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -8,14 +8,17 @@ ca-certificates=2021.1.19=h06a4308_0
 certifi=2020.12.5=py39h06a4308_0
 cffi=1.14.4=py39h261ae71_0
 chardet=4.0.0=py39h06a4308_1003
+click=7.1.2=pyhd3eb1b0_0
 cryptography=3.3.1=py39h3c74f83_0
 idna=2.10=pyhd3eb1b0_0
+joblib=1.0.0=pyhd3eb1b0_0
 ld_impl_linux-64=2.33.1=h53a641e_7
 libedit=3.1.20191231=h14c3975_1
 libffi=3.3=he6710b0_2
 libgcc-ng=9.1.0=hdf63c60_0
 libstdcxx-ng=9.1.0=hdf63c60_0
 ncurses=6.2=he6710b0_1
+nltk=3.5=py_0
 openssl=1.1.1i=h27cfd23_0
 pip=20.3.3=py39h06a4308_0
 pycparser=2.20=py_2
@@ -23,12 +26,14 @@ pyopenssl=20.0.1=pyhd3eb1b0_1
 pysocks=1.7.1=py39h06a4308_0
 python=3.9.1=hdb3f193_2
 readline=8.0=h7b6447c_0
+regex=2020.11.13=py39h27cfd23_0
 requests=2.25.1=pyhd3eb1b0_0
 setuptools=51.3.3=py39h06a4308_4
 six=1.15.0=py39h06a4308_0
 soupsieve=2.1=pyhd3eb1b0_0
 sqlite=3.33.0=h62c20be_0
 tk=8.6.10=hbc83047_0
+tqdm=4.55.1=pyhd3eb1b0_0
 tzdata=2020f=h52ac0ba_0
 urllib3=1.26.2=pyhd3eb1b0_0
 wheel=0.36.2=pyhd3eb1b0_0
