--- a/query_processor/package.json
+++ b/query_processor/package.json
@@ -40,6 +40,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "heap": "^0.2.6",
+    "natural": "^2.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
