--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -22,6 +22,7 @@ nltk=3.5=py_0
 openssl=1.1.1i=h27cfd23_0
 pip=20.3.3=py39h06a4308_0
 pycparser=2.20=py_2
+pymongo=3.11.2=py39h2531618_0
 pyopenssl=20.0.1=pyhd3eb1b0_1
 pysocks=1.7.1=py39h06a4308_0
 python=3.9.1=hdb3f193_2
