--- a/query_processor/package.json
+++ b/query_processor/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7",
@@ -40,6 +41,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "heap": "^0.2.6",
+    "mongoose": "^5.11.13",
     "natural": "^2.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
