Implement multithreaded indexer & query processors (#17)
* Add multithreading to indexer

* Add multithreading to query processor (logical split)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
   indexer:
     build: ./indexer
     environment:
+      - THREADS=${THREADS}
       - MONGO_USERNAME=${MONGO_USERNAME}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
       - MONGO_DATABASE=${MONGO_DATABASE}
